# ebios_rm_ai_manager

./: .dockerignore  .env.example  .env.local.example  .env.production  .env.production.example  .env.workshop1  .firebaserc  .gitignore  ACCES_DIRECT_FORMATION.md  ATELIER_1_SOCLE_SECURITE_PLAN_DETAILLE.md  ATELIER_2_SOURCES_RISQUES_DETAILLE.md  ATELIER_2_SOURCES_RISQUES_PLAN_DETAILLE.md  ATELIER_3_SCENARIOS_STRATEGIQUES_PLAN_DETAILLE.md  ATELIER_4_SCENARIOS_OPERATIONNELS_PLAN_DETAILLE.md  ATELIER_5_TRAITEMENT_RISQUE_PLAN_DETAILLE.md  CLAUDE.md  CONFIGURATION_MODES.md  CORRECTION_BUG_REPONSE_TRONQUEE.md  CORRECTION_FINALE_COMPLETE.md  CORRECTION_MODULES_DIFFERENCIES.md  CORRECTION_PEDAGOGIQUE_APPLIQUEE.md  CORRECTION_UX_INTERFACE_APPLIQUEE.md  DEPENDANCES_ATELIERS_EBIOS_RM.md  DEPLOYMENT-GCP.md  DEPLOYMENT_GUIDE.md  DIAGNOSTIC_EXPERT_CORRECTIONS.md  DOCUMENTATION_TECHNIQUE_CLUB_EBIOS_COMPLETE.md  Dockerfile  FIREBASE_AI_INTEGRATION.md  FIREBASE_CONFIG.md  GUIDE_CONNEXION_ET_TEST.md  GUIDE_DEPLOIEMENT_DETAILLE.md  GUIDE_DEPLOIEMENT_LOCAL.md  GUIDE_RISK_MANAGERS.md  GUIDE_TEST_MOTEUR_IA_STRUCTURANT.md  GUIDE_TEST_ROUTE_CORRECTE.md  IMPLEMENTATION_STATUS.md  INSTALLATION_GUIDE.md  INTEGRATION_FORMATION.md  INTEGRATION_STATUS.md  (+80 more)
python-ai-service/: .env.example  Dockerfile  README.md  agent_memory.db  app.py  check_unified_schema.py  coherence_endpoint.py  init_db_tables.py  install_and_run.py  install_missing_libraries.py  main.py  pyproject.toml  requirements-cloudrun.txt  requirements-minimal.txt  requirements.txt  simple_app.py  simple_main.py  start_ai_service.bat  (+9 more)
(+978 files in other folders)
